Ensure player session fallback works

--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Queen of Hearts Gameroom</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/style.css" />
+</head>
+<body data-page="landing">
+  <header class="site-header">
+    <div class="logo">
+      <div class="logo-mark" aria-hidden="true">❤</div>
+      <div class="logo-text">
+        <span class="logo-title">Queen of Hearts</span>
+        <span class="logo-subtitle">Gameroom</span>
+      </div>
+    </div>
+    <nav class="nav-links">
+      <a href="player.html">Player portal</a>
+      <a href="#features">Features</a>
+    </nav>
+    <div class="header-cta">
+      <a class="btn ghost" href="player.html">Sign in</a>
+      <a class="btn" href="player.html#signup">Create account</a>
+    </div>
+  </header>
 
+  <main class="split">
+    <section class="hero">
+      <div class="hero-content">
+        <p class="eyebrow">Premium online arcade</p>
+        <h1>Queen of Hearts Gameroom</h1>
+        <p class="lead">
+          Player-first hub to manage wallets, deposits, game usernames, and transfer requests with instant balance updates.
+        </p>
+        <div class="hero-actions">
+          <a class="btn" href="player.html">Player portal</a>
+        </div>
+        <div class="trust-panel">
+          <div>
+            <strong>Wallet control</strong>
+            <span>Player balances, deposits, and transfer requests</span>
+          </div>
+          <div>
+            <strong>Payments your way</strong>
+            <span>Tierlock, Bitcoin, Cash App, or card</span>
+          </div>
+          <div>
+            <strong>Game accounts</strong>
+            <span>Ultra Panda and other titles per player</span>
+          </div>
+        </div>
+      </div>
+      <div class="card highlight">
+        <div class="card-header">
+          <div>
+            <p class="eyebrow">Player tools</p>
+            <h3>Everything in one portal</h3>
+          </div>
+          <span class="badge">Live</span>
+        </div>
+        <ul class="feature-list" id="features">
+          <li>Wallet balances stored per player</li>
+          <li>Deposits via Tierlock, Bitcoin, Cash App, or card</li>
+          <li>Self-serve game usernames for titles such as Ultra Panda</li>
+          <li>Instant transfers that credit game balances automatically</li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div>
+      <div class="logo">
+        <div class="logo-mark" aria-hidden="true">❤</div>
+        <div class="logo-text">
+          <span class="logo-title">Queen of Hearts</span>
+          <span class="logo-subtitle">Gameroom</span>
+        </div>
+      </div>
+      <p class="muted">Player-focused experience for balances, deposits, game usernames, and transfer requests.</p>
+    </div>
+    <div class="footer-links">
+      <a href="player.html">Player portal</a>
+      <a href="#features">Features</a>
+    </div>
+  </footer>
+
+  <script src="assets/script.js"></script>
+</body>
+</html>
